<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:id="@+id/error_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/error_image"
                android:layout_width="match_parent"
                android:layout_height="268dp"
                android:layout_gravity="center"
                android:contentDescription="@string/error_image"
                android:src="@drawable/undraw_page_not_found_re_e9o6" />

            <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/oops_something_went_wrong"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

            <Button
                android:id="@+id/btn_try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/try_again" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />


        <ImageView
            android:id="@+id/detail_bg"
            android:layout_width="match_parent"
            android:layout_height="214dp"
            android:adjustViewBounds="true"
            android:clipToPadding="true"
            android:contentDescription="@string/image_cover"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />


        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_bg"
            tools:text="nama acara" />

        <TextView
            android:id="@+id/detail_owner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="?attr/textAppearanceBodySmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_name"
            tools:text="nama penyelenggara" />

        <LinearLayout
            android:id="@+id/detail_time_quota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/detail_owner_name"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/detail_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Waktu: " />

            <TextView
                android:id="@+id/detail_quota"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                tools:text="Quota: " />
        </LinearLayout>

        <TextView
            android:id="@+id/detail_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="8dp"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_time_quota"
            tools:text="@tools:sample/lorem" />

        <Button
            android:id="@+id/detail_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="16dp"
            android:text="@string/detail_register"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
